--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "test": "jasmine-node spec"
   },
   "engines": {
-    "node": "~0.4.12"
+    "node": ">=0.2.0"
   },
   "dependencies": {},
   "devDependencies": {}
